feat: add set policies with tests
